----------
v6.2.0-git
----------

[mms] Add keyboard shortcuts to allow a more granular scroll of the dynamic
      preview pane (Request #12750).
[mms] Add a simple domain checker to the autocompleter that checks for common
      misspellings.
[mms] Add country flag graphic to contact image information in dynamic view.
[mms] Address autocompleter on dynamic and basic page now uses a fancy UI.
[mms] Add ability to specify maximum total attachment size in composed message
      before all attachments are converted to links.
[mms] Cache generation of print-specific CSS.
[mms] Add support for showing a contact image in the contacts popup box in
      dynamic view.
[mms] Add ability to create a new filter rule from context menus in the
      dynamic view.
[mms] More intelligent sizing of raw message parts opened in a popup window.
[mms] Load sent-mail mailbox list on demand in dynamic view.
[mms] Allow configurable access to remote accounts from within a session
      (Request #8077).
[jan] Display "Other Options" icon instead of "New Window" icon in collapsed
      preview headers.
[mms] More advanced auto-completion for smartmobile view.


----------
v6.1.5-git
----------

[mms] Fix populating search fields when editing an advanced search query.
[mms] Trigger auto save draft in dynamic view if attachments have changed.
[mms] SECURITY: Fix XSS in message and search screens resulting from a
      user-defined flag label (João Machado <geral@jpaulo.eu>).
[mms] Improved UI for dropping attachments on dynamic compose screen.
[mms] Fix manually loading all addresses in a header.
[mms] Fix regression where reloading dynamic view would not load the previously
      selected message.
[mms] Fixed regression in enforcing max_recipients and max_timelimit
      permissions (Bug #12674).
[mms] Correctly enforce file size attachment limits on the first attachment
      (Bug #12663).
[mms] Don't attempt to get quota information from non-IMAP mailboxes (Bug
      #12608).