@@ -125,9 +125,29 @@ class IMP_Compose_Ui
     {
         $identities = array();
         $identity = $GLOBALS['injector']->getInstance('IMP_Identity');
+        $filter = $GLOBALS['injector']->getInstance('Horde_Core_Factory_TextFilter');
 
         foreach (array_keys($identity->getAll('id')) as $ident) {
             $sm = $identity->getValue(IMP_Mailbox::MBOX_SENT, $ident);
+
+            $sig = $identity->getSignature('text', $ident);
+            $html_sig = $identity->getSignature('html', $ident);
+            if (!strlen($html_sig) && strlen($sig)) {
+                $html_sig = IMP_Compose::text2html($sig);
+            }
+            $sig_dom = new Horde_Domhtml($html_sig, 'UTF-8');
+            $html_sig = '';
+            foreach ($sig_dom->getBody()->childNodes as $child) {
+                $html_sig .= $sig_dom->dom->saveXml($child);
+            }
+            $sig = $filter->filter(
+                trim($sig),
+                array('Text2html', 'Space2html'),
+                array(
+                    array('parselevel' => Horde_Text_Filter_Text2html::NOHTML),
+                    array()
+                )
+            );
 
             $identities[] = array(
                 // Sent mail mailbox name
@@ -137,7 +157,11 @@ class IMP_Compose_Ui
                 // Sent mail display name
                 'sm_display' => $sm ? $sm->display_html : '',
                 // Bcc addresses to add
-                'bcc' => strval($identity->getBccAddresses($ident))
+                'bcc' => strval($identity->getBccAddresses($ident)),
+                // Plain text signature
+                'sig' => $sig,
+                // HTML signature
+                'hsig' => $html_sig,
             );
         }
 
