@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [jan] Display signature in compose view.
 * [mms] Add keyboard shortcuts to allow a more granular scroll of the dynamic preview pane (Request #12750).
 * [mms] Add a simple domain checker to the autocompleter that checks for common misspellings.
 * [mms] Add country flag graphic to contact image information in dynamic view.
